fix(track_page_visualization_bug): overflow-y switched to auto

--- a/home/home-layer/home-layer.component.scss
+++ b/home/home-layer/home-layer.component.scss
@@ -5,7 +5,7 @@ wm-home-layer {
   justify-content: flex-start;
   align-items: stretch;
   align-content: stretch;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: fit-content;
   position: relative;
   wm-img,
